--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "deploy": "git push heroku master"
   },
   "dependencies": {
     "dotenv": "^8.6.0",
