--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "git push heroku master"
   },
   "dependencies": {
+    "bcrypt": "~5.0.0",
     "dotenv": "^8.6.0",
     "express": "^4.16.1",
     "express-session": "~1.17.1",
